--- a/prepros.config
+++ b/prepros.config
@@ -909,6 +909,17 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "sass/style.sass",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      }
+    ]
   }
 }
